--- a/course-service/package.json
+++ b/course-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docker-compose-demo-simple",
+  "name": "demo-docket-rest-api-simple",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  }
 }
